--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "ethers": "github:Railgun-Community/ethers.js#v6.7.6",
     "level-js": "6.1.0",
     "leveldown": "6.1.1",
-    "snarkjs": "0.7.0",
-    "web3": "^4.0.3"
+    "snarkjs": "0.7.0"
   }
 }
