--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,7 @@
   },
   "github": {
     "web": false,
-    "release": true,
+    "release": false,
     "skipChecks": true,
     "tagName": "v${version}",
     "releaseName": "Release v${version}"
