--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "LGPL-3.0-or-later",
   "devDependencies": {
     "@graphql-tools/utils": "^9.2.1",
+    "@release-it/conventional-changelog": "^7.0.0",
     "@types/level-js": "4.0.2",
     "@types/leveldown": "4.0.3",
     "@types/node": "20.4.1",
@@ -53,18 +54,19 @@
     "patch-package": "~8.0.0",
     "react-native": "0.72.3",
     "release-it": "^16.1.5",
-    "@release-it/conventional-changelog": "^7.0.0",
     "rimraf": "~5.0.1",
     "ts-node": "10.9.1",
     "tslib": "^2.4.0",
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "@railgun-community/cookbook": "2.5.3",
-    "@railgun-community/curve25519-scalarmult-rsjs": "0.2.3",
-    "@railgun-community/shared-models": "6.4.0",
-    "@railgun-community/waku-relayer-client-node": "6.2.3",
-    "@railgun-community/wallet": "7.3.4",
+    "@libp2p/interface": "^1.3.0",
+    "@railgun-community/cookbook": "2.6.3",
+    "@railgun-community/curve25519-scalarmult-rsjs": "0.2.4",
+    "@railgun-community/poseidon-hash-rsjs": "1.0.1",
+    "@railgun-community/shared-models": "6.4.4",
+    "@railgun-community/waku-relayer-client-node": "6.2.12",
+    "@railgun-community/wallet": "7.4.4",
     "bn": "1.0.5",
     "colors": "^1.4.0",
     "enquirer": "2.3.6",
