--- a/package.json
+++ b/package.json
@@ -61,16 +61,16 @@
   },
   "dependencies": {
     "@libp2p/interface": "1.3.0",
-    "@railgun-community/cookbook": "2.8.5",
+    "@railgun-community/cookbook": "2.9.1",
     "@railgun-community/curve25519-scalarmult-rsjs": "0.2.4",
     "@railgun-community/poseidon-hash-rsjs": "1.0.1",
-    "@railgun-community/shared-models": "7.4.4",
-    "@railgun-community/waku-broadcaster-client-node": "8.1.0",
-    "@railgun-community/wallet": "10.2.5",
+    "@railgun-community/shared-models": "7.5.0",
+    "@railgun-community/waku-broadcaster-client-node": "8.2.3",
+    "@railgun-community/wallet": "10.3.1",
     "bn": "1.0.5",
     "colors": "^1.4.0",
     "enquirer": "2.3.6",
-    "ethers": "github:Railgun-Community/ethers.js#v6.7.10",
+    "ethers": "6.13.1",
     "level-js": "6.1.0",
     "leveldown": "6.1.1",
     "snarkjs": "0.7.0"
