--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -19,14 +19,12 @@ jobs:
       fail-fast: false # prevents GitHub from cancelling all in-progress jobs if any matrix job fails.
       matrix:
         node-version: [20.x]
-        os: [ubuntu-20.04, macos-latest, windows-latest]
+        os: [ubuntu-20.04, macos-latest]
         include:
           - os: macos-latest
             output: terminal-wallet-cli
           - os: ubuntu-20.04
             output: terminal-wallet-cli
-          - os: windows-latest
-            output: terminal-wallet-cli.exe
 
     runs-on: ${{ matrix.os }}
     outputs:
@@ -89,11 +87,9 @@ jobs:
       run: |
         mv cli-macos-latest/terminal-wallet-cli terminal-wallet-macos
         mv cli-ubuntu-20.04/terminal-wallet-cli terminal-wallet-linux
-        mv cli-windows-latest/terminal-wallet-cli.exe terminal-wallet-win.exe
         chmod a+x terminal-wallet-macos terminal-wallet-linux
         tar -czf release-${{needs.ship.outputs.version}}-macos.tar.gz terminal-wallet-macos
         tar -czf release-${{needs.ship.outputs.version}}-linux.tar.gz terminal-wallet-linux
-        tar -czf release-${{needs.ship.outputs.version}}-win.tar.gz terminal-wallet-win.exe
         sha256sum release-* >> SHA256SUMS.sha
 
     - name: Upload artifacts to GitHub Release
