--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@gnosis-guild/zodiac-core": "^2.0.0",
     "@libp2p/interface": "1.3.0",
     "@railgun-community/cookbook": "2.10.3",
     "@railgun-community/curve25519-scalarmult-rsjs": "0.2.4",
